* Implementation for FileTracker

--- a/cmd/Upscale.csproj
+++ b/cmd/Upscale.csproj
@@ -14,6 +14,7 @@
     <Compile Include="RunCmd.cs" />
     <Compile Include="DryRunCmd.cs" />
     <Compile Include="Transform.cs" />
+    <Compile Include="FileTracker.cs" />
     <Compile Include="Vars.cs" />
     <Compile Include="Config.cs" />
   </ItemGroup>
