+ cliwrap; wrapper around Process * Vars; changed extracting vars to only report most nested vars

--- a/cmd/Upscale.csproj
+++ b/cmd/Upscale.csproj
@@ -15,6 +15,7 @@
     <Compile Include="Usings.cs" />
     <Compile Include="Vars.cs" />
     <Compile Include="serilog/**/*.cs" />
+    <Compile Include="process/**/*.cs" />
   </ItemGroup>
 
     <ItemGroup>
